crates/eml_cli/tests/snapshots/ui__run@effects__io_operation_as_value.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/io_operation_as_value.em
---
--- stdout ---
a
b
--- stderr ---
