crates/eml_cli/tests/snapshots/ui__run@effects__multi_choice.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/multi_choice.em
---
--- stdout ---
bits:0 bits:1 bits:2 bits:3 bits:4 bits:5 bits:6 bits:7
8
--- stderr ---
