crates/eml_cli/tests/snapshots/ui__run@effects__multi_over_once.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/multi_over_once.em
---
--- stdout ---
3
--- stderr ---
