crates/eml_cli/tests/snapshots/ui__run@effects__multi_resume.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/multi_resume.em
---
--- stdout ---
picked 1 and picked 2
picked 1
dropped
unused
<picked 2>/<picked 1>
--- stderr ---
