crates/eml_cli/tests/snapshots/ui__run@effects__state.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/state.em
---
--- stdout ---
16
16
--- stderr ---
