crates/eml_cli/tests/snapshots/ui__run@effects__state_multi.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/state_multi.em
---
--- stdout ---
T:a|F:b
--- stderr ---
