crates/eml_cli/tests/snapshots/ui__run@effects__state_omitted_return.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/state_omitted_return.em
---
--- stdout ---
42
--- stderr ---
