crates/eml_cli/tests/snapshots/ui__run@effects__state_unit.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/state_unit.em
---
--- stdout ---
41
--- stderr ---
